fix(table-input-wrappers): dark mode color update

--- a/packages/core/src/components/table/table-vars.scss
+++ b/packages/core/src/components/table/table-vars.scss
@@ -93,10 +93,10 @@
   /* Table input */
   --tds-table-input-background: var(--tds-grey-900);
   --tds-table-input-background-focus: var(--tds-grey-800);
-  --tds-table-input-background-hover: var(--tds-grey-958);
-  --tds-table-input-background-disabled: var(--tds-grey-700);
-  --tds-table-input-header-icon: var(--tds-grey-600);
-  --tds-table-input-header-placeholder: var(--tds-grey-600);
+  --tds-table-input-background-hover: var(--tds-grey-700);
+  --tds-table-input-background-disabled: var(--tds-grey-600);
+  --tds-table-input-header-icon: var(--tds-grey-500);
+  --tds-table-input-header-placeholder: var(--tds-grey-500);
   --tds-table-input-header-background-focus: var(--tds-grey-900);
 
   /* Table-footer */
